# docx_modify

./: .asciidoctorconfig  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.adoc  LICENSE  MANIFEST.in  README.adoc  __main__.py  gui.ui  make_file.sh  pyproject.toml  ruff.toml
.github/: build.yml
.github/workflows/: main.yml
css/: default.css
docs/: README_ru.md
docx_modify/: const.py  docx_modify.exe.spec  docx_modify.spec  enum_element.py  exceptions.py  file_processing.py  init_logger.py
docx_modify/core_elements/: clark_name.py  core_document.py  core_zip_file.py  updated_zip_file.py
docx_modify/interface/: constants.py  custom_element.py  gui.py
docx_modify/word_elements/: word_file.py  word_file_collection.py
docx_modify/xml_elements/: xml_body.py  xml_content_types.py  xml_document.py  xml_element_factory.py  xml_file.py  xml_file_fixer.py  xml_hdr_ftr.py  xml_object.py  xml_properties.py  xml_relationships.py  xml_section.py  xml_settings.py  xml_styles.py
sources/: logger.yml
sources/arch/headers_footers/: footer1.xml  footer3.xml  footer4.xml  footer5.xml  footer6.xml  footer7.xml  header1.xml  header2.xml  header3.xml  header4.xml
sources/arch/rels/: footer3.xml.rels
sources/change_list/: change_list_table.xml
sources/change_list_styles/: styles.xml
sources/default/: approvement_list.xml  custom.xml
sources/military/: footer3.xml
sources/prog/headers_footers/: footer1.xml  footer3.xml  footer4.xml  header2.xml  header3.xml  header4.xml
sources/styles/: styles.xml
sources/typo/headers_footers/: footer1.xml  footer3.xml  footer4.xml  header1.xml  header2.xml  header3.xml  header4.xml
sources/typo/rels/: header3.xml.rels
